Bug 49934 - RTF editing/import doesn't recognize page breaks
Summary: RTF editing/import doesn't recognize page breaks
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.3 release
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.0.0.0.beta0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-14 18:06 UTC by Dennis Roczek
Modified: 2012-12-08 13:40 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Lorem Ipsum RTF with 'new page' not working (9.76 KB, application/rtf)
2012-05-14 18:06 UTC, Dennis Roczek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dennis Roczek 2012-05-14 18:06:25 UTC
Created attachment 61662 [details]
Lorem Ipsum RTF with 'new page' not working

The attached file shows a really short and quickly created latex file, converted with Latex2RTF ( http://latex2rtf.sourceforge.net/ ).

Latex2RTF inserts the 'new page' command somehow differently and this is not recognized by LO/AOO(?)/Wordpad(!)

Wordpad opens this rtf file in a similar way like LO (at least it looks/is displayed similar), but open this file with the 'Microsoft Word Viewer 2003 (11.8238.8341) SP3' (likely that the actual MSO will display the file identical) the new page command is correctly recognized.

Page 2 and 3 (or better saying the headline "2  test2" and the following text) should be on a new page.
Comment 1 Dennis Roczek 2012-05-14 18:11:09 UTC
Oh and the page number in the footer (as reported in an other bug) is also not shown...
Comment 2 Dennis Roczek 2012-05-15 14:00:11 UTC
Just tested:

not supporting:
*Textedit (Mac OS X 10.7)
*Libreoffice 3.5.3.2 (Mac and win 7)
*Wordpad (Win 7 and Win XP)
*Apache OpenOffice 3.4

supporting:
*MSO 2007
*Microsoft Word Viewer 2003 (11.8238.8341) SP3

Wasn't easy to test since some applications simply remove lines of the code they don't understand. 

Opening the rft file with a simple text editor, it seems that '\column' is the relevant command which isn't understood by defacto most applications.
Comment 3 Julien Nabet 2012-05-18 07:33:28 UTC
On pc Debian x86-64, with master updated today, I reproduce the problem. (no new page for 2 test 2).
No specific messages in console.
Comment 4 Dennis Roczek 2012-05-18 16:36:22 UTC
Maybe just an interesting note:
Although IBM Lotus Symphony has some RTF improvements which will be merged into AOO ( http://wiki.services.openoffice.org/w/index.php?title=Contribution#rtf ) - it also doesn't recognize that kind of new page command. (just tested in an Win XP VM)
Comment 5 Dennis Roczek 2012-06-06 07:04:51 UTC
getting into the sourcecode of Latex2RTF and my test file, I recognized, that the the command is not called 
 \page
(which is understood as I recognized it with a modified test file), but sadly of 
 \column


see http://latex2rtf.svn.sourceforge.net/viewvc/latex2rtf/branches/vendor/commands.c?revision=1195&view=markup#l87 and the real code at http://latex2rtf.svn.sourceforge.net/viewvc/latex2rtf/branches/vendor/funct2.c?revision=1195&view=markup#l483
Comment 6 Miklos Vajna 2012-12-08 13:33:34 UTC
Assign this to me, will have a look in a bit.
Comment 7 Not Assigned 2012-12-08 13:36:30 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b4e305d778d153fa768a8c8cabd111efdd34c2fa&g=libreoffice-4-0

fdo#49934 fix RTF import of column break in case no columns are defined


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.