fdo#49934 fix RTF import of column break in case no columns are defined

It turns out on that case the column break should be parsed as a page
break.

Change-Id: I5dddc8f334fab35bc2ff03fd8127989ab6a601f3